@@ -15,19 +15,22 @@ JAR_FILE=build/libs/massacre-$EXPERIMENT_ID.jar
 
 START=`date +%s`
 
-java -verbose:gc -XX:+PrintGCTimeStamps -Xloggc:exp.$EXPERIMENT_ID.noa.gc.log -Djavaagent:$JAR_FILE -jar $JAR_FILE &
+java -XX:NativeMemoryTracking=summary -javaagent:$JAR_FILE -jar $JAR_FILE &
 
 JAVA_PID=$!
 
 trap "kill -9 $JAVA_PID" EXIT
 
-for i in `seq 1 10`; do
-  RSS=`ps -o rss -p $JAVA_PID | grep -v RSS`
-  NOW=`date +%s`
-  T=`expr $NOW - $START`
+for i in `seq 1 60`; do
+  output_file=exp.$EXPERIMENT_ID.null.$i.txt
+  jcmd $JAVA_PID VM.native_memory summary > $output_file
 
-  printf "T+%05sT: RSS=%010sK" "$T" "$RSS"
-  echo ""
+  T=`expr $(date +%s) - $START`
+  RSS=`ps -o rss -p $JAVA_PID | grep -v RSS`
+  VMS=`grep 'Total:' $output_file`
+
+  printf "T+%05dT: RSS=%010dK; JVM=%s;" "$T" "$RSS" "$VMS"
+  echo "" # line break
 
   sleep 1
 done
